--- a/NeuroValet.csproj
+++ b/NeuroValet.csproj
@@ -13,6 +13,7 @@
       https://nuget.samboy.dev/v3/index.json
     </RestoreAdditionalProjectSources>
     <RootNamespace>NeuroValet</RootNamespace>
+    <BaseOutputPath>..\BepInEx\plugins</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
