--- a/NeuroValet.csproj
+++ b/NeuroValet.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
     <PackageReference Include="UnityEngine.Modules" Version="2018.4.30" IncludeAssets="compile" />
+    <PackageReference Include="VedalAI.NeuroSdk.Unity" Version="2.0.0-pre.3" />
   </ItemGroup>
   
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
