--- a/NeuroValet.csproj
+++ b/NeuroValet.csproj
@@ -14,6 +14,7 @@
     </RestoreAdditionalProjectSources>
     <RootNamespace>NeuroValet</RootNamespace>
     <BaseOutputPath>..\BepInEx\plugins</BaseOutputPath>
+	<DebugType>Full</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
