--- a/NeuroValet.csproj
+++ b/NeuroValet.csproj
@@ -33,6 +33,9 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>lib\Assembly-CSharp.dll</HintPath>
     </Reference>
+	<Reference Include="Unity.TextMeshPro">
+		<HintPath>lib\Unity.TextMeshPro.dll</HintPath>
+	</Reference>
   </ItemGroup>
   
   <ItemGroup>
